--- a/ShipsTest/ShipsTest.csproj
+++ b/ShipsTest/ShipsTest.csproj
@@ -71,7 +71,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="AlgorithmsTest.cs" />
+    <Compile Include="CollectionExtensionsTest.cs" />
+    <Compile Include="ShipHelpersTests.cs" />
+    <Compile Include="ShipTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
