--- a/SimpleGame/SimpleGame.csproj
+++ b/SimpleGame/SimpleGame.csproj
@@ -171,5 +171,11 @@
     <Resource Include="Images\blue_ship.png" />
     <Resource Include="Images\red_ship.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\ship_2.png" />
+    <Resource Include="Images\ship_3.png" />
+    <Resource Include="Images\ship_4.png" />
+    <Resource Include="Images\ship_6.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
